--- a/Project 09 - Umbler clone/style.css
+++ b/Project 09 - Umbler clone/style.css
@@ -225,7 +225,7 @@ section .container .hostConfigs {
     border-radius: 20px;
     box-shadow: 0 0 1px 0 rgba(59,89,178,.08), 
                 0 4px 14px rgba(59,89,178,.06);
-    padding: 30px 30px 0 30px;
+    padding: 20px 30px 0 30px;
 }
 
 /* =-=-=-=-= First line =-=-=-=-= */
@@ -234,6 +234,7 @@ section .container .hostConfigs .firstLine {
     grid-template-columns: 15% 40% 44%;
     overflow: hidden;
     padding: 20px 0;
+    margin-bottom: 15px;
 }
 
 /* =-=-=-=-= Node Logo =-=-=-=-= */
@@ -353,6 +354,7 @@ section .container .hostConfigs .firstLine .serverState .box .text h2:last-of-ty
 section .container .hostConfigs .secondLine {
     display: flex;
     gap: 20px;
+    margin-bottom: 20px;
 }
 
 section .container .hostConfigs .secondLine .edit {
@@ -418,5 +420,22 @@ section .container .hostConfigs .secondLine .share span i {
 
 /* =-=-=-=-= Third line =-=-=-=-= */
 section .container .hostConfigs .thirdLine {
-    display: flex;   
+    display: flex;
+}
+
+section .container .hostConfigs .thirdLine span {
+    color: #0000009f;
+    font-size: 17px;
+    font-weight: 500;
+    padding: 10px 15px;
+    padding-bottom: 20px;
+}
+
+section .container .hostConfigs .thirdLine span i{
+    margin-left: 5px;
+}
+
+section .container .hostConfigs .thirdLine span:first-child {
+    color: #557cf2;
+    border-bottom: 4px solid #557cf2;
 }
