--- a/Project 09 - Umbler clone/style.css
+++ b/Project 09 - Umbler clone/style.css
@@ -10,7 +10,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
     background-color: #F7FAFF;
 }
 
