--- a/Project 10 - Telegram Clone/style.css
+++ b/Project 10 - Telegram Clone/style.css
@@ -53,7 +53,7 @@ nav ul li a{
 }
 
 nav ul li a i {
-    color: rgba(255, 255, 255, 0.329);
+    color: #a3b2ffbe;
     font-size: 26px;
 }
 
@@ -66,7 +66,7 @@ nav ul li span {
 }
 
 .menuSelectedIcon {
-    color: #c79bf0;
+    color: #d2b0f1;
     background-color: #434655;
 }
 
