--- a/Project 10 - Telegram Clone/style.css
+++ b/Project 10 - Telegram Clone/style.css
@@ -14,7 +14,8 @@ body {
     height: 100vh;
     overflow: hidden;
     background-color: #282A36;
-    display: flex;
+    display: grid;
+    grid-template-columns: min-content min-content 1fr;
 }
 
 /* =-=-=-=-= Menu =-=-=-=-= */
@@ -189,4 +190,38 @@ nav ul li span {
     font-weight: 500;
 }
 
-/* =-=-=-=-= Chat =-=-=-=-= */
+/* =-=-=-=-= Message =-=-=-=-= */
+.message header {
+    height: 50px;
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #191f3b2c;
+}
+
+.message header h1 {
+    font-size: 20px;
+    color: rgb(214, 214, 13);
+}
+
+.message header .icons {
+    display: flex;
+    gap: 20px;
+}
+
+.message header .icons span {
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
+.message header .icons span i {
+    color:#5e6cb1;
+}
+
+.message header .icons span:hover i{
+    color:#9324dd;
+} 
