--- a/Project 11 - Random Things/single div battery/style.css
+++ b/Project 11 - Random Things/single div battery/style.css
@@ -47,7 +47,46 @@ body {
     bottom: 0;
     left: 10px;
     border-radius: 5px;
-    box-shadow: 50px 0 #FFF,
-                100px 0 #FFF,
-                150px 0 #FFF;
+    box-shadow: 50px 0 transparent,
+                100px 0 transparent,
+                150px 0 transparent;
+    animation: charge 4s infinite;
+}
+
+@keyframes charge {
+    22% {
+        box-shadow: 50px 0 transparent,
+                    100px 0 transparent,
+                    150px 0 transparent;
+    }
+    25% {
+        box-shadow: 50px 0 #FFF,
+                    100px 0 transparent,
+                    150px 0 transparent;
+    }
+    47% {
+        box-shadow: 50px 0 #FFF,
+                    100px 0 transparent,
+                    150px 0 transparent;
+    }
+    50% {
+        box-shadow: 50px 0 #FFF,
+                    100px 0 #FFF,
+                    150px 0 transparent;
+    }
+    72% {
+        box-shadow: 50px 0 #FFF,
+                    100px 0 #FFF,
+                    150px 0 transparent;
+    }
+    75% {
+        box-shadow: 50px 0 #FFF,
+                    100px 0 #FFF,
+                    150px 0 #FFF;
+    }
+    95% {
+        box-shadow: 50px 0 #FFF,
+                    100px 0 #FFF,
+                    150px 0 #FFF;
+    }
 }
