--- a/Project 11 - Random Things/button hover effect/style.css
+++ b/Project 11 - Random Things/button hover effect/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 *,
 *::before,
 *::after {
@@ -5,3 +7,49 @@
     margin: 0;
 }
 
+body {
+    background-color: #E8EBF0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button {
+    height: 100px;
+    width: 250px;
+    background-color: #E8EBF0;
+    border: 5px solid #202538;
+    position: relative;
+    cursor: pointer;
+}
+
+button::before,
+button::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #E8EBF0;
+    border: 5px solid #202538;
+}
+
+button::before {
+    bottom: -15px; 
+    left: -15px; 
+    z-index: -1;
+}
+
+button::after {
+    content: attr(data-text);
+    color: #202538;
+    font-family: "Poppins", sans-serif;
+    font-size: 22px;
+    letter-spacing: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: -15px;
+    right: -15px;
+    z-index: 1;
+}
