--- a/Project 11 - Random Things/masked emoji/style.css
+++ b/Project 11 - Random Things/masked emoji/style.css
@@ -20,6 +20,8 @@ body {
     );
     border-radius: 50%;
     position: relative;
+    overflow: hidden;
+    box-shadow: 30px 30px 35px rgba(0, 0, 0, 0.25);
 }
 
 .emoji::before,
@@ -40,4 +42,38 @@ body {
 
 .emoji::after {
     right: 80px;
+}
+
+.mask {
+    height: 120px;
+    width: 220px;
+    background-color: #e9fbfa;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    bottom: 30px;
+    z-index: 0;
+    border-radius: 5px 5px 50% 50%;
+}
+
+.mask::before,
+.mask::after {
+    content: "";
+    width: 300px;
+    height: 10px;
+    background-color: #e9fbfa;
+    position: absolute;
+    z-index: -1;
+}
+
+.mask::before {
+    transform: rotate(-20deg);
+    top: 30px;
+    right: -51px;
+}
+.mask::after {
+    transform: rotate(20deg);
+    top: 30px;
+    left: -51px;
 }
