--- a/Project 13 - Gameboy/style.css
+++ b/Project 13 - Gameboy/style.css
@@ -46,3 +46,12 @@ body {
 .top-bar::after {
     right: 25px;
 }
+
+.screen {
+    width: 250px;
+    height: 250px;
+    border: 5px solid #522433;
+    margin: 30px 0 0 30px;
+    border-radius: 10px 10px 30px 10px;
+    background-color: #a07c88;
+}
