--- a/Project 13 - Gameboy/style.css
+++ b/Project 13 - Gameboy/style.css
@@ -86,5 +86,22 @@ body {
     background-color: #9ddb85;
     box-shadow: inset 5px 5px 0 0 rgba(0, 0, 0, .2);
     position: relative;
+    overflow: hidden;
+}
+
+.screen .glass::before,
+.screen .glass::after {
+    content: "";
+    background-color: #FFF5;
+    width: 40px;
+    height: 200%;
+    position: absolute;
+    transform: rotate(45deg);
+    top: -70px;
+}
+
+.screen .glass::after {
+    right: -15px;
+    width: 60px;
 }
 
