--- a/Project 13 - Gameboy/style.css
+++ b/Project 13 - Gameboy/style.css
@@ -83,7 +83,7 @@ body {
 .screen span {
     width: 10px;
     height: 10px;
-    background-color: rgb(230, 84, 84);
+    background-color: #e65454;
     position: absolute;
     left: 10px;
     border-radius: 50%;
@@ -114,6 +114,12 @@ body {
 .screen .glass::after {
     right: -15px;
     width: 60px;
+}
+
+.controls {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .arrows {
@@ -165,4 +171,30 @@ body {
     border-top: none;
     bottom: 15px;
     box-shadow: inset 0 -5px 0 #0003;
+}
+
+.buttons {
+    width: 120px;
+    height: 70px;
+    background-color: #9297ac;
+    position: relative;
+    right: 15px;
+    top: 30px;
+    border-radius: 100px;
+    padding: 8px 3px;
+    border: 5px solid #522433;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    transform: rotate(-25deg);
+}
+
+.buttons button {
+    width: 40px;
+    height: 40px;
+    background-color: #e65454;
+    border-radius: 50%;
+    border: 5px solid #522433;
+    box-shadow: inset 5px 0 0 #FFF,
+                inset -5px 0 0 #0003;
 }
