--- a/Project 13 - Gameboy/style.css
+++ b/Project 13 - Gameboy/style.css
@@ -4,20 +4,30 @@
     box-sizing: border-box;
 }
 
+:root {
+    --background: #a5bddd;
+    --gameboy-color: #b6f3fd;
+    --border: #522433;
+    --screen-background: #8b6f6b;
+    --button: #e65454;
+    --button-background: #9297ac;
+    --arrows: #8b6f6b;
+}
+
 body {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(165, 189, 221);
+    background-color: var(--background);
 }
 
 .gameboy {
-    background-color: #b6f3fd;
+    background-color: var(--gameboy-color);
     width: 320px;
     height: 590px;
     border-radius: 20px 20px 50px 20px;
-    border: 5px solid #522433;
+    border: 5px solid var(--border);
     box-shadow: inset 10px 0 rgba(255, 255, 255, 0.705),
                 inset -10px 0 #0003;
     position: relative;
@@ -26,7 +36,7 @@ body {
 .top-bar {
     width: 100%;
     height: 35px;
-    border-bottom: 5px solid #522433;
+    border-bottom: 5px solid var(--border);
     position: relative;
     box-shadow: 0 5px 0 #0003;
 } 
@@ -36,7 +46,7 @@ body {
     content: "";
     width: 5px;
     height: 100%;
-    background-color: #522433;
+    background-color: var(--border);
     position: absolute;
 }
 
@@ -51,10 +61,10 @@ body {
 .screen {
     width: 250px;
     height: 250px;
-    border: 5px solid #522433;
+    border: 5px solid var(--border);
     margin: 30px 0 0 30px;
     border-radius: 10px 10px 30px 10px;
-    background-color: #8b6f6b;
+    background-color: var(--screen-background);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,7 +76,7 @@ body {
     content: "";
     height: 3px;
     width: 120px;
-    background-color: #522433;
+    background-color: var(--border);
     position: absolute;
     top: 12px;
 }
@@ -83,17 +93,17 @@ body {
 .screen span {
     width: 10px;
     height: 10px;
-    background-color: #e65454;
+    background-color: var(--button);
     position: absolute;
     left: 10px;
     border-radius: 50%;
-    border: 1px solid #522433;
+    border: 1px solid var(--border);
 }
 
 .screen .glass {
     width: 185px;
     height: 185px;
-    border: 5px solid #522433;
+    border: 5px solid var(--border);
     background-color: #9ddb85;
     box-shadow: inset 5px 5px 0 0 rgba(0, 0, 0, .2);
     position: relative;
@@ -125,7 +135,7 @@ body {
 .arrows {
     width: 120px;
     height: 120px;
-    border: 5px solid #522433;
+    border: 5px solid var(--border);
     position: relative;
     top: 30px;
     left: 15px;
@@ -140,7 +150,7 @@ body {
     content: "";
     width: 30px;
     height: 30px;
-    background-color: #8b6f6b;
+    background-color: var(--arrows);
 }
 
 .arrows .top-arrow,
@@ -149,8 +159,8 @@ body {
 .arrows .bottom-arrow {
     width: 30px;
     height: 30px;
-    border:5px solid #522433;
-    background-color: #8b6f6b;
+    border:5px solid var(--border);
+    background-color: var(--arrows);
     position: absolute;
     box-shadow: inset 0 5px 0 #FFF;
 }
@@ -176,13 +186,13 @@ body {
 .buttons {
     width: 120px;
     height: 70px;
-    background-color: #9297ac;
+    background-color: var(--button-background);
     position: relative;
     right: 15px;
     top: 30px;
     border-radius: 100px;
     padding: 8px 3px;
-    border: 5px solid #522433;
+    border: 5px solid var(--border);
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -192,9 +202,9 @@ body {
 .buttons button {
     width: 40px;
     height: 40px;
-    background-color: #e65454;
+    background-color: var(--button);
     border-radius: 50%;
-    border: 5px solid #522433;
+    border: 5px solid var(--border);
     box-shadow: inset 4px 0 0 #FFF9,
                 inset -5px 0 0 #0003;
     outline: none;
@@ -215,8 +225,8 @@ body {
     content: "";
     width: 40px;
     height: 8px;
-    background-color: #9297ac;
-    border: 5px solid #522433;
+    background-color: var(--button-background);
+    border: 5px solid var(--border);
     position: absolute;
     transform: rotate(-30deg);
     border-radius: 10px;
@@ -238,7 +248,7 @@ body {
 .dots span {
     line-height: 0;
     letter-spacing: 5px;
-    color: #522433;
+    color: var(--border);
     font-weight: 900;
     font-size: 20px;
 }
