--- a/Project 13 - Gameboy/style.css
+++ b/Project 13 - Gameboy/style.css
@@ -9,6 +9,7 @@
     --gameboy-color: #b6f3fd;
     --border: #522433;
     --screen-background: #8b6f6b;
+    --glass: #9ddb85;
     --button: #e65454;
     --button-background: #9297ac;
     --arrows: #8b6f6b;
@@ -104,7 +105,7 @@ body {
     width: 185px;
     height: 185px;
     border: 5px solid var(--border);
-    background-color: #9ddb85;
+    background-color: var(--glass);
     box-shadow: inset 5px 5px 0 0 rgba(0, 0, 0, .2);
     position: relative;
     overflow: hidden;
