--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -154,3 +154,52 @@ section .project .btn button:nth-child(2):hover i {
     background-color: #695e5e;
     color: #80bbf1;
 }
+
+/* =-=-=-= Contributions =-=-=-=-= */
+
+section .contributions .values{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+section .contributions .values div {
+    display: flex;
+    flex-direction: column;
+    padding: 0 25px;
+    text-align: center;
+}
+
+section .contributions .values div:nth-child(2) {
+    border-left: 1px solid #7a7a7a50;
+    border-right: 1px solid #7a7a7a50;
+}
+
+section .contributions .values div span:nth-child(1) {
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+section .contributions .values div span:nth-child(2) {
+    font-size: 15px;
+    color: #7a7a7a;
+    font-weight: 400;
+}
+
+section .contributions .progress {
+    width: 100%;
+    height: 10px;
+    margin-top: 50px;
+    background-color: #d1d1d185;
+    border-radius: 10px;
+    position: relative;
+}
+
+section .contributions .progress::after {
+    content: "";
+    position: absolute;
+    width: 85%;
+    height: 100%;
+    background-color: #3cb4ac;
+    border-radius: 10px;
+}
